# automation-agent

./: .dockerignore  .env.example  .gitignore  .golangci.yml  AGENTS.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  go.mod  go.sum
.agents/: AGENTS.md
.agents/standards/: agent-build-pattern.md  architecture-design.md  architecture.md  ci-integration.md  deployment.md  documentation.md  go-style.md  language-parity.md  local-development.md  observability.md  testing.md  webhooks.md
.agents/templates/: add.spec.md  change.spec.md  migrate.spec.md  remove.spec.md
ARCH/: AGENTS.md  arch_test.go  doc.go  docs_test.go
cmd/: AGENTS.md
cmd/agent/: AGENTS.md  main.go
docs/: architecture.md  ci-integration.md  deployment.md  parity-status.md
go/: .golangci.yml  AGENTS.md  Makefile  go.mod  go.sum
go/ARCH/: AGENTS.md  arch_test.go  docs_test.go
go/cmd/: AGENTS.md
go/cmd/agent/: AGENTS.md  main.go
go/cmd/playground/: AGENTS.md  main.go
go/internal/agent/: AGENTS.md
go/internal/auth/: AGENTS.md  auth.go  auth_test.go
go/internal/config/: AGENTS.md  config.go  config_app_test.go  config_test.go
go/internal/githubapi/: AGENTS.md  githubapi.go  githubapi_test.go
go/internal/gitrepo/: AGENTS.md  gitrepo.go  gitrepo_test.go
go/internal/ingest/: AGENTS.md  envelope.go  envelope_test.go
go/internal/notify/: AGENTS.md  notify.go  notify_test.go  teams.go
go/internal/obs/: AGENTS.md  exporters.go  log.go  log_test.go  middleware.go  middleware_test.go  obs.go  obs_test.go  propagation.go  propagation_test.go
go/internal/scheduler/: AGENTS.md  scheduler.go
go/internal/tasks/: AGENTS.md  cloudtasks.go  cloudtasks_test.go  inprocess.go  inprocess_test.go  transport.go
go/internal/webhook/: AGENTS.md  handlers.go  server.go  webhook_test.go
internal/: AGENTS.md
internal/agent/: AGENTS.md
internal/agent/covfixer/: AGENTS.md  analyze.go  coverage_test.go
internal/agent/fixflow/: AGENTS.md  analyze.go  applyfix.go  applyfix_test.go  engine.go  engine_test.go  explore.go  files.go  tools.go  tools_test.go
internal/agent/lintfixer/: AGENTS.md  analyze.go  analyze_test.go  applyfix.go  (+5 more)
internal/config/: AGENTS.md  config.go  config_test.go
internal/githubapi/: AGENTS.md  githubapi.go  githubapi_test.go
internal/gitrepo/: AGENTS.md  gitrepo.go  gitrepo_test.go
internal/ingest/: AGENTS.md  envelope.go
internal/notify/: AGENTS.md  slack.go
internal/reconcile/: AGENTS.md  reconcile.go  reconcile_test.go
internal/scheduler/: AGENTS.md  scheduler_test.go
internal/webhook/: AGENTS.md  handlers.go  server.go  webhook_test.go
javascript/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  PORTING.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
javascript/arch/: AGENTS.md  arch.test.ts  docs.test.ts  helpers.ts
javascript/cmd/: AGENTS.md
javascript/src/: AGENTS.md
kotlin/: .gitignore  AGENTS.md  README.md  build.gradle.kts  gradlew  settings.gradle.kts
kotlin/konsist/: AGENTS.md  build.gradle.kts
python/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  PORTING.md  README.md  pyproject.toml
python/arch/: AGENTS.md  conftest.py  test_arch.py  test_docs.py
python/automation_agent/: AGENTS.md
python/automation_agent/agent/: AGENTS.md
python/automation_agent/agent/covfixer/: AGENTS.md  __init__.py  analyze.py  coverage.py  loader.py  triage.py
python/automation_agent/agent/covfixer/prompts/: explore.md  summarize_result.md
python/automation_agent/agent/fixflow/: AGENTS.md  __init__.py  analyze.py  applyfix.py  driver.py  engine.py  envelope.py  explore.py  files.py  registry.py  summary.py  tools.py  util.py
python/automation_agent/agent/lintfixer/: AGENTS.md  __init__.py  analyze.py  lint.py  loader.py  triage.py
python/automation_agent/agent/lintfixer/prompts/: analyze.md
python/automation_agent/agent/reviewer/: AGENTS.md  __init__.py  agents_setup.py  categories.py  enqueue.py  filter.py  findings.py  glue.py  review.py  reviewer.py  scorecard.py  sizegate.py
python/automation_agent/agent/reviewer/prompts/: safety.md
python/automation_agent/agent/root/: AGENTS.md  __init__.py  agents_setup.py  root.py
python/automation_agent/agent/setup/: AGENTS.md  __init__.py  events.py  generate.py  llm.py  longrun.py  names.py  parkstore.py  parkstore_firestore.py  prompt.py  runner.py  session.py
python/automation_agent/agent/summary/: AGENTS.md  __init__.py  agents_setup.py  summary.py
python/automation_agent/auth/: AGENTS.md  __init__.py  auth.py
python/automation_agent/config/: AGENTS.md  __init__.py  config.py
python/automation_agent/githubapi/: AGENTS.md  __init__.py  client.py
python/automation_agent/gitrepo/: AGENTS.md  __init__.py  repo.py
python/automation_agent/ingest/: AGENTS.md  __init__.py  envelope.py
python/automation_agent/notify/: AGENTS.md  __init__.py  notify.py  slack.py  teams.py
python/automation_agent/obs/: AGENTS.md  __init__.py  exporters.py  log.py  middleware.py  obs.py  propagation.py
python/automation_agent/scheduler/: AGENTS.md  __init__.py  scheduler.py
python/automation_agent/tasks/: AGENTS.md  __init__.py  cloudtasks.py  inprocess.py  transport.py
python/automation_agent/webhook/: AGENTS.md  __init__.py  server.py
python/cmd/: AGENTS.md
python/cmd/agent/: AGENTS.md  main.py
python/cmd/playground/: AGENTS.md
python/cmd/playground/chat/: AGENTS.md  __init__.py  agent.py
python/tests/: AGENTS.md  conftest.py  test_auth.py  test_config.py  test_config_app.py  test_covfixer.py  test_fixflow_applyfix.py  test_fixflow_engine.py  test_fixflow_registry.py  test_fixflow_summary.py  test_fixflow_units.py  test_githubapi.py  test_githubapi_reviewer.py  test_gitrepo.py  test_ingest.py  test_lintfixer.py  test_notify.py  test_obs.py  test_reviewer_engine.py  test_reviewer_units.py  test_reviewer_wiring.py  test_root.py  test_scheduler.py  test_setup_longrun.py  test_setup_misc.py  test_setup_parkstore.py  test_setup_session.py  test_summary.py  test_tasks.py  test_webhook.py
(+448 files in other folders)
