[project]
name = "automation-agent"
version = "0.1.0"
description = "automation-agent on Python/ADK: ingests events, routes through a root dispatcher, and runs summary / lint-fixer / coverage-fixer workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "litellm>=1.40.0",
    "PyGithub>=2.3.0",
    "GitPython>=3.1.43",
    "APScheduler>=3.10.4",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["automation_agent"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.1",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
testpaths = ["tests", "arch"]
filterwarnings = ["ignore::UserWarning"]

[tool.coverage.run]
source = ["automation_agent"]
branch = false

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["cmd"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = true
explicit_package_bases = true
