[project]
name = "automation-agent"
version = "0.1.0"
description = "automation-agent on Python/ADK: ingests events, routes through a root dispatcher, and runs summary / lint-fixer / coverage-fixer workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "litellm>=1.40.0",
    "PyGithub>=2.3.0",
    "GitPython>=3.1.43",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    # Async sqlite for the durable park store (SESSION_BACKEND=sqlite). adk's
    # SqliteSessionService also uses it; we depend on it directly since we import it.
    "aiosqlite>=0.20.0",
    # Firestore client for the cloud park store + adk's native FirestoreSessionService
    # (SESSION_BACKEND=firestore). adk lazy-imports it; we depend on it directly.
    "google-cloud-firestore>=2.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["automation_agent"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.1",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
testpaths = ["tests", "arch"]
filterwarnings = ["ignore::UserWarning"]

[tool.coverage.run]
source = ["automation_agent"]
branch = false
# The firestore park store is exercised only against the Firestore emulator (see the
# cover-firestore make target + tests gated on FIRESTORE_EMULATOR_HOST), so it is omitted
# from the default unit-coverage gate rather than forcing every dev to run the emulator.
omit = ["automation_agent/agent/setup/parkstore_firestore.py"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["cmd"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = true
explicit_package_bases = true
